--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,18 @@
     </dependency>
   </dependencies>
 
+  <distributionManagement>
+		 <snapshotRepository>
+		    <id>deploymentRepo</id>
+		    <url>http://172.31.18.248:8081/repository/maven-snapshots/</url>
+		 </snapshotRepository>
+		
+		 <repository>
+		    <id>deploymentRepo</id>
+		    <url>http://172.31.18.248:8081/repository/maven-releases/</url>
+		 </repository>
+  </distributionManagement>
+
   <build>
     <finalName>career</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
